--- a/gb/24/6/27/n14278861.md
+++ b/gb/24/6/27/n14278861.md
@@ -155,7 +155,7 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279607.md#1">【新闻大破解】A股又跌破三千点 经济多癌并发</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279167.md#1">【新闻大家谈】拜登川普2024首场辩论 火花再现</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/2/n10947759.md#1" target="_blank">传奇总统里根（5）：竞选总统 众望所归</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/12/7/4/n3627160.md#1" target="_blank">心湖：中共是破坏道德的罪魁祸首</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/26/n10248973.md#1" target="_blank">还原真实的中共：年轻人乌托邦梦碎</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/4/7/n10284039.md#1" target="_blank">中国良心教师们的故事（1）</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/24/n14276301.md#1">台湾古典诗：杉林溪绣球花</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277524.md#1">她的过去和现在：用舞蹈完成父亲遗愿</a></li>
