--- a/gb/24/6/27/n14278861.md
+++ b/gb/24/6/27/n14278861.md
@@ -155,7 +155,7 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279029.md#1">研究：监管不足 美河流一半的水面临污染风险</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279597.md#1">【全球连线】特工大揭秘 全球共谍浮出水面</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/3/7/n11922778.md?dfh#1" target="_blank">了解法轮功：见证奇迹 解开生命奥秘</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/15/n10785014.md#1" target="_blank">共产暴政录：镇压“反革命”运动</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/5/25/n7931425.md#1" target="_blank">手术前一刻 老伴的膀胱癌消失了</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/10/n11444846.md#1" target="_blank">夏祷：2019火种：天象巨变（1）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/9/2/26/n2443847.md#1" target="_blank">《中共弄巧成拙》(1):天安门自焚伪案</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277524.md#1">她的过去和现在：用舞蹈完成父亲遗愿</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/24/n14276301.md#1">台湾古典诗：杉林溪绣球花</a></li>
